--- a/BackendFundamentals-OrganizerApp/package.json
+++ b/BackendFundamentals-OrganizerApp/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "node nodemon index.js"
+    "dev": "npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
